fixed the issue with the ingredients not showing up by popluating the arry in the show route, edited the show.liquid to display the ingredients via a for loop

--- a/public/styles.css
+++ b/public/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-color: rgb(124, 215, 189)
+    background-color: rgb(131, 208, 225)
 }
 
 .card {
